# icfpcontest2016

./: .gitignore  .travis.yml  END_OF_CONTEST_TODO  README.txt  Readme.md  git update-index --remove registration.txt  post-mortem  registration.txt  taurus_source_me.sh
dashboard/: Gemfile
dashboard/dashboards/: sample.erb  sampletv.erb
dashboard/jobs/: leaderboard.rb
meta/: add.py  build.sh  build.template.py  control.py  dashboard.py  evaluate.py  evaluator.py  execute.py  executor.py  get_tasks.py  git.py  icfpc.py  init.py  models.py  put_solutions.py  report.py  run.py  submit.py  work_local.py  work_remote.py
solutions/: 00002.txt  00003.txt  00004.txt  00005.txt  00008.txt  00009.txt  00010.txt  00011.txt  00012.txt  00013.txt  00014.txt  00015.txt  00016.txt  00019.txt  00032.txt  00037.txt  00039.txt  00042.txt  00044.txt  00048.txt  00086.txt  00107.txt  00164.txt  00167.txt  00170.txt  00179.txt  00191.txt  00196.txt  00285.txt  00291.txt  00292.txt  00294.txt  00308.txt  00328.txt  00344.txt  00356.txt  00357.txt  00366.txt  00367.txt  00462.txt  (+120 more)
solver/: CMakeLists.txt
solver/cmake/: FindGMP.cmake  FindSteven.cmake
solver/include/nitro/args/: args.hpp
solver/include/nitro/dl/: dl.hpp  exception.hpp  symbol.hpp
solver/include/nitro/env/: get.hpp  hostname.hpp
solver/include/nitro/log/: log.hpp  logger.hpp  record.hpp  severity.hpp  stream.hpp
solver/include/nitro/log/attribute/: hostname.hpp  message.hpp  mpi_rank.hpp  omp_thread_id.hpp  pid.hpp  pthread_id.hpp  severity.hpp  std_thread_id.hpp  timestamp.hpp
solver/include/nitro/log/detail/: has_attribute.hpp  set_attribute.hpp
solver/include/nitro/log/filter/: and_filter.hpp  mpi_master_filter.hpp  not_filter.hpp  null_filter.hpp  or_filter.hpp  severity_filter.hpp
solver/include/nitro/log/sink/: null.hpp  stderr.hpp  stderr_mt.hpp  stdout.hpp  stdout_mt.hpp
solver/include/nitro/meta/: variadic.hpp
solver/include/zebra/: backward_solve.hpp  exception.hpp  facet.hpp  geometry.hpp  line_segment.hpp  log.hpp  node_graph.hpp  origami.hpp  point.hpp  polygon.hpp  pythagoras.hpp  silhouette.hpp  skeleton.hpp  solution.hpp  solver.hpp  stupidsolve.hpp  stupidsolver.hpp  task.hpp  triangle.hpp
solver/include/zebra/geometry/: cgal.hpp  geometry.hpp  gmp.hpp  kernel.hpp  line_segment.hpp  point.hpp  polygon.hpp  triangle.hpp  upoint.hpp
solver/include/zebra/solvers/: backward_constraints.hpp  base.hpp  bfs.hpp  brute.hpp  brutesolver.hpp  idfs.hpp  meta.hpp  simple.hpp  solve_backward.hpp  stupid.hpp
solver/src/: main.cpp
solver/src/geometry/: upoint.cpp
solver/src/solver/: solve_backward.cpp
solver/tests/: CMakeLists.txt  backward_test.cpp  cgal_join_test.cpp  cgal_test.cpp  line_segment_test.cpp  logging_test.cpp  point_test.cpp  pythagoras_test.cpp  random_solutions_test.cpp  resemblance_test.cpp  rotate_test.cpp  run_random_solutions_test.sh  silhouette_test.cpp  skeleton_fold_test.cpp  skeleton_test.cpp  solution_fold_test.cpp  solution_to_png_test.cpp  task_test.cpp  task_to_png_test.cpp  windmill_test.cpp
tasks/: task001_solution.txt  task029.txt  task032.txt  task036.txt  task038.txt  task041.txt  task045.txt  task047.txt  task050.txt  task053.txt  task056.txt  task060.txt  task062.txt  task065.txt  task069.txt  task071.txt  task075.txt  task077.txt  task080.txt  task084.txt  task086.txt  task090.txt  task092.txt  task096.txt  task099.txt
(+16 files in other folders)
